apps/cxs-onenote-auth/overlays/staging/cxs-onenote-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-onenote-auth
spec:
  rules:
    - host: onenote.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cxs-onenote-auth
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - onenote.contextsuite.com
      secretName: star-contextsuite-com
